# Qarser

./: .gitignore  CMakeLists.txt
include/: ast.h  lexer.h  parser.h  token.h
include/AST/: ast.h  ast.hpp  ast_print.h  ast_visitor.h  expression.hpp  gate.hpp  printer.hpp  visitor.hpp
include/SA/: analyzer.hpp  semantic_analyer.h  symbol.h
include/SA/analyzers/: base_analyzer.hpp  declaration_analyzer.hpp  gate_def_analyzer.hpp  gate_usage_analyzer.hpp
include/SA/context/: analysis_context.hpp  gate_def_context.hpp
include/SA/error/: error.hpp
include/SA/symbol/: gate_scope.hpp  symbol.hpp
src/: lexer.cpp  parser.cpp  test.cpp
